# dullahan

./: .gitignore  AGENTS.md  LICENSE  OVERVIEW.md  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
deploy/: Caddyfile  dullahan.env.example  dullahan.service  gen-dashboard-creds.sh  install.sh
docs/: api.md  deploy.md  overview.md
e2e/: README.md  package-lock.json  package.json  playwright.config.ts  run-server.sh
e2e/tests/: collect.spec.ts
examples/: QUICKSTART.md  script-tag.html
scripts/: loadtest.sh
server/: .env.example  Cargo.toml  Dockerfile  README.md
server/.cargo/: audit.toml
server/assets/: pt.js
server/migrations/: 0001_init.sql  0002_pageleave.sql  0003_attribution.sql  0004_view_id.sql  0005_sessions.sql  0006_received_at_index.sql  0007_blog_posts.sql
server/src/: blog.rs  channels.rs  config.rs  contact.rs  db.rs  email.rs  ingest.rs  lib.rs  main.rs  salt.rs  state.rs  stats.rs  types.rs  ua.rs
server/tests/: api.rs  blog.rs  contract.rs  script.rs
tracker/: package-lock.json  package.json  tsconfig.json  tsconfig.test.json  tsup.config.ts
tracker/src/: auto.ts  clicks.ts  collect.ts  engagement.ts  index.ts  payload.ts  performance.ts  privacy.ts  scroll.ts  transport.ts  types.ts
tracker/test/: analytics.test.ts  auto.test.ts  clicks.test.ts  contract.test.ts  engagement.test.ts  payload.test.ts  performance-attribution.test.ts  privacy.test.ts  scroll.test.ts  transport.test.ts
tracker/test/fixtures/wire/: event.json  pageleave.json  pageview.json  performance.json
(+3 files in other folders)
